--- a/nkgg.html
+++ b/nkgg.html
@@ -16,8 +16,7 @@
 </div>
 <div class="bdheader">
     <div class="l">
-        <a href="javascript:;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;【官方认证】解决男性健康问题&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            中医国粹 与“性福”同行</a>
+        <a href="javascript:;">【官方认证】解决男性健康问题&nbsp;中医国粹与“性福”同行</a>
     </div>
     <!--<div class="l dingyue">
         <a href="javascript:;">咨询</a>
