--- a/qysq.html
+++ b/qysq.html
@@ -28,7 +28,7 @@
                 <div id="meta_content" class="rich_media_meta_list">
                     <em id="post-date" class="rich_media_meta rich_media_meta_text">2019-03-08</em>
                     <a style="display: inline-block; vertical-align: middle;margin-right: 8px;margin-bottom: 10px;font-size: 16px;"
-                       href="javascript:yellow();">女神系列</a>
+                       href="javascript:;" onclick="yellow()">女神系列</a>
                 </div>
 
                 <div class="rich_media_content " id="js_content">
