--- a/yysx.html
+++ b/yysx.html
@@ -23,8 +23,7 @@
                 <h2 class="rich_media_title" id="activity-name">男子网恋<span>8</span>年花<span>70</span>余万，女友居然是自己的…</h2>
                 <div id="meta_content" class="rich_media_meta_list">
                     <em id="post-date" class="rich_media_meta rich_media_meta_text">2019-03-08</em>
-                    <a style="display: inline-block; vertical-align: middle;margin-right: 8px;margin-bottom: 10px;font-size: 16px;"
-                       href="javascript:yellow();">女神系列</a>
+                    <a style="display: inline-block; vertical-align: middle;margin-right: 8px;margin-bottom: 10px;font-size: 16px;" href="javascript:;" onclick="yellow()">女神系列</a>
                 </div>
 
                 <div class="rich_media_content " id="js_content">
