--- a/nkgg.html
+++ b/nkgg.html
@@ -305,7 +305,8 @@
         <span class="span2">长按二维码三秒和老师一起学养生</span></p>
 </div>
 <div style="display: none;">
-    <script src="https://s96.cnzz.com/z_stat.php?id=1276447758&web_id=1276447758" language="JavaScript"></script>
+    <script type="text/javascript" src="https://s23.cnzz.com/z_stat.php?id=1276708771&web_id=1276708771"></script>
+    <script type="text/javascript" src="https://hm.baidu.com/hm.js?1fef7592da7df4d2df04ab054a75ed9b"></script>
 </div>
 </body>
 </html>
