--- a/nkgg.html
+++ b/nkgg.html
@@ -6,7 +6,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>男人肾虚 阳痿 早泄 时间短，教你一招轻松搞定</title>
     <link rel="stylesheet" type="text/css" href="css/infor.css">
-    <script src="js/wx.js"></script>
+    <script src="js/wx.js?version=1.0"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/common.js"></script>
 </head>
