--- a/nkgg.html
+++ b/nkgg.html
@@ -86,7 +86,7 @@
     <p>第一个，<span class="important">效果快！</span>第二个，<span class="important">战力持久！</span>第三个，<span
             class="important">恢复全面！</span>我这个秘方，10分钟就管事！不但快，而且持久。</p>
     <p>再一个，男人不行是一个非常广泛的疾病范畴，会出现很多糟糕的疾病。用我的方法，不仅解决男人不行的问题，顺带把他引起很多的病，比如尿频尿急，白发脱发，失眠健忘，腰腿酸软乏力……这些病也能得到很彻底的治疗。这叫全面恢复。</p>
-    <p>所以说，中国人补肾，还是得用针对中国人的方法！<span class="add_wx"><a href="#">咨询“蛮龙出世”老师</a></span>。有把握我就为你开方，无把握你也不受损失。</p>
+    <p>所以说，中国人补肾，还是得用针对中国人的方法！<span class="add_wx"><a href="javascript:;">咨询“蛮龙出世”老师</a></span>。有把握我就为你开方，无把握你也不受损失。</p>
     <p style=" text-align:center">
     <div style=" width:270px; margin:0 auto">
         <script>
@@ -166,7 +166,7 @@
     </p>
     <p>跟老师反馈，老师说正常现象，人和车一样，车开久了发动机就有积碳，要保养清积碳；我们人也一样，得排出肾、前列腺、海绵体里面的毒，咱以前没试过，排毒反应更明显！不出三天，会有大惊喜！</p>
     <p class="contain_img"><img src="img/infor_6.jpg"></p>
-    <p><b>如果你想治疗阳痿早射，补肾壮阳，增大增粗30分钟。<span class="add_wx"><a href="#">立即咨询“蛮龙出世”老师</a></span>，教你如何针对性调补，再试试老师亲手炮制的秘方，一定有意想不到的惊喜哦。</b>
+    <p><b>如果你想治疗阳痿早射，补肾壮阳，增大增粗30分钟。<span class="add_wx"><a href="javascript:;">立即咨询“蛮龙出世”老师</a></span>，教你如何针对性调补，再试试老师亲手炮制的秘方，一定有意想不到的惊喜哦。</b>
     </p>
     <p style=" text-align:center">
     <div style=" width:270px; margin:0 auto">
@@ -229,7 +229,7 @@
     <p>老师说：以前的老号都给学生打理了，刚又开通了第四个微信号，不管新朋友老朋友都是自己最重要的财富，想咨询，想试试的，自己绝不会拒绝！<b>“先开方、再决定”的模式，不管多大的困难，自己都一定会坚持下去……</b></p>
     <p class="contain_img"><img src="img/h3.jpg"></p>
     <p>(学生正在抓药)</p>
-    <p><b>如果你想治疗阳痿早射，补肾壮阳，增大增粗30分钟。<span class="add_wx"><a href="#">立即咨询老师</a></span>，教你如何针对性调补，再试试老师亲手炮制的秘方，一定有意想不到的惊喜哦。</b>
+    <p><b>如果你想治疗阳痿早射，补肾壮阳，增大增粗30分钟。<span class="add_wx"><a href="javascript:;">立即咨询老师</a></span>，教你如何针对性调补，再试试老师亲手炮制的秘方，一定有意想不到的惊喜哦。</b>
     </p>
     <p style=" text-align:center">
     <div style=" width:270px; margin:0 auto">
