--- a/nkgg.html
+++ b/nkgg.html
@@ -9,6 +9,7 @@
     <script src="js/wx.js?version=1.0"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/common.js"></script>
+    <script src="js/wx.js"></script>
 </head>
 
 <body>
