--- a/yx.html
+++ b/yx.html
@@ -1,5 +1,4 @@
 <html>
-
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
@@ -10,24 +9,39 @@
         <script src="/js/jquery.min.js"></script>
         <script src="/js/common.js?v=1851511"></script>
     </head>
-
+    <style type="text/css">
+        p {
+            padding-left: 10px;
+            padding-right: 10px;
+        }
+        .add_wx {
+            padding: 3px 6px;
+            border-radius: 6px;
+            background-color: #c7254e;
+            color: #fff;
+        }
+    </style>
     <body>
 <p>
-    <h1>
+    <h1 style="text-align: center;">
         游戏萌妹大放狂言：不管你多小白，让你成为真大神！<span></span>
     </h1>
-    <h2 style="margin-top: 20px;">
+    <h2 style="margin-top: 20px;text-align: center;">
         如何做到真大神？<span></span>
     </h2>
-    <h2>
+    <h2 style="text-align: center;">
         “最美萌妹子”一个办法让你变游戏大神<span></span>
     </h2>
     <p style="margin-left:0cm;">
         招兵买马，运筹帷幄， 绝品装备，唯美角色！<span></span>
     </p>
     <p style="margin-left:0cm;">
-        不管你是小白，菜鸟，<span>BOSS</span>打不过，还是副本不会通关，只要这个妹子带，让你秒变游戏大神<span>
-            <img style="width:200px;height:200px;margin-top:20px;margin-left: 80px;" src="/image/img1.jpg" alt="IMG_258" /></span>
+        不管你是小白，菜鸟，<span>BOSS</span>打不过，还是副本不会通关，只要这个妹子带，让你秒变游戏大神
+    </p>
+    <p>
+        <span>
+            <img style="width:200px;height:200px;margin-top:20px;margin-left: 80px;" src="/image/img1.jpg" alt="IMG_258" />
+        </span>
     </p>
     <p style="margin-left:0cm;">
         很多游戏太坑，充钱没盼头，战斗力升不上，没人带通关，升级太缓慢！<span></span>
@@ -44,10 +58,10 @@
     <p align="center" style="margin-left:0cm;text-align:center;">
         微信长按上方萌妹微信二维码<span>“</span>识别图中二维码<span>”</span>。<span></span>
     </p>
-    <h2 align="center" style="text-align:center;">
+    <h2 align="center" style="text-align:center;margin-left: 10px;">
         爆极品装备，打最爽副本<span></span>
     </h2>
-    <h2 align="center" style="text-align:center;">
+    <h2 align="center" style="text-align:center;margin-left: 10px;">
         通关<span>BOSS</span>，都可以做到！<span></span>
     </h2>
     <p class="MsoNormal" align="center" style="text-align:center;">
@@ -59,11 +73,10 @@
     <p class="MsoNormal" align="left" style="text-align:left;">
         <span></span>
     </p>
-    <div style="border:none;padding:0cm 0cm 0cm 7.0pt;">
-        <p style="margin-left:0cm;">
-            萌妹们针对游戏问题，不管你纯小白，游戏菜鸟还是想在游戏世界一展宏图，7天让你享受从小白到大神的进阶之路
-        </p>
-    </div>
+
+    <p style="margin-left:0cm;">
+        萌妹们针对游戏问题，不管你纯小白，游戏菜鸟还是想在游戏世界一展宏图，7天让你享受从小白到大神的进阶之路
+    </p>
     <p style="margin-left:0cm;">
         第一个，升级快！ 第二个，掉落极品装备！第三个，萌妹带玩！
     </p>
@@ -71,10 +84,10 @@
         再一个，在大家玩其他各种游戏的过程中，极品装备难掉落，升级缓慢，<span>BOSS</span>难打，不充钱不能过，副本太坑诸如此类的各种问题，但是在这里，除了能解决以上的问题，还有漂亮小姐姐带玩，性感萌妹跟你结婚，副本随便过，<span>boss</span>随便打，一天升级成大神。<span></span>
     </p>
     <p align="center" style="margin-left:0cm;text-align:center;">
-        <img width="381" height="184" src="/image/img4.jpg" /><span></span>
+        <img width="300" height="145" src="/image/img4.jpg" /><span></span>
     </p>
     <p style="margin-left:0cm;">
-        所以说，玩游戏的方式千万条，不坑队友第一条！<a href="javascript:;"><span>咨询</span><span>最</span></a>美萌妹客服。有把握她们就带你飞，无把握你也不受损失。<span></span>
+        所以说，玩游戏的方式千万条，不坑队友第一条！<span class="add_wx">咨询最美萌妹客服</span>。有把握她们就带你飞，无把握你也不受损失。<span></span>
     </p>
     <p align="center" style="margin-left:0cm;text-align:center;">
         <img border="0" width="213" height="212" src="/image/wx-img2.jpg" /><span></span>
@@ -88,17 +101,17 @@
     <p style="margin-left:0cm;">
         游戏萌妹，多年游戏经验。在各种游戏世界中畅游，了解每种游戏的玩法，通关概率，装备掉落概率，各种养成类，剧情类，通关类游戏，<span></span>
     </p>
-    <h2>
+    <h2 style="margin-left: 10px;">
         是运气不好、还是技能不对？<span></span>
     </h2>
-    <h2>
+    <h2 style="margin-left: 10px;">
         玩游戏，得用对方法！<span></span>
     </h2>
     <p style="margin-left:0cm;">
         现在社会，节奏快、压力大，十个男人九个玩游戏，压力大的人十分普遍，对工作生活感到迷茫的人也很多，：<span>“</span>游戏是好东西，用的巧能纾解压力，用不好也能让人沉迷其中，不同的游戏不同的玩法，你是技巧的问题还是游戏玩法的问题，不能乱琢磨，弄不好就是沉迷其中，无法自拔！”<span></span>
     </p>
     <p align="center" style="margin-left:0cm;text-align:center;">
-        <img border="0" width="456" height="285" src="/image/img6.jpg" /><span></span>
+        <img border="0" width="300" height="190" src="/image/img6.jpg" /><span></span>
     </p>
     <p align="center" style="margin-left:0cm;text-align:center;">
         <img border="0" width="193" height="194" src="/image/wx-img3.jpg" /><span></span>
