--- a/nkgg.html
+++ b/nkgg.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/infor.css">
     <script src="js/wx.js?version=1.0"></script>
     <script src="js/jquery.min.js"></script>
-    <script src="js/common.js"></script>
+    <script src="js/common.js?version=1584626"></script>
     <script src="js/wx.js?version=1.0.01"></script>
 </head>
 
