--- a/nkgg.html
+++ b/nkgg.html
@@ -6,10 +6,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>男人肾虚 阳痿 早泄 时间短，教你一招轻松搞定</title>
     <link rel="stylesheet" type="text/css" href="css/infor.css">
-    <script src="js/wx.js?version=1.0"></script>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/common.js?version=1584206"></script>
-    <script src="js/wx.js?version=1.0.10"></script>
+    <script src="/js/wx.js?version=1.0"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/common.js?version=100006"></script>
+    <script src="/js/wx.js?version=1.0.10005000"></script>
 </head>
 
 <body>
