--- a/ydjz.html
+++ b/ydjz.html
@@ -92,10 +92,9 @@ opacity: 0;
 .xinxi{border-bottom: 1px solid #ddd;margin:10px 0 30px;text-align: right;padding-right: 15px;padding-bottom: 5px;color:#999;font-size: 14px;}
 .yishu{font-family: "Georgia";font-size: 16px;color: #f54343;font-weight: bold;}
 </style>
-<script src="./js/jquery.min.js?version=1546206"></script>
-<script src="./js/common.js?version=156026"></script>
-<script src="./js/wx.js?version=158206"></script>
-
+<script src="/js/jquery.min.js?version=1546206"></script>
+<script src="/js/common.js?version=15620026"></script>
+<script src="/js/wx.js?version=158005000020006"></script>
     <div class="main">
     <div id="header"> 
      <div class="logo">
