--- a/nkgg.html
+++ b/nkgg.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/infor.css">
     <script src="/js/wx.js?version=1.0"></script>
     <script src="/js/jquery.min.js"></script>
-    <script src="/js/common.js?version=100006"></script>
+    <script src="/js/common.js?version=1000006"></script>
     <script src="/js/wx.js?version=1.0.10005000"></script>
 </head>
 
