--- a/mldq.html
+++ b/mldq.html
@@ -489,7 +489,7 @@
             </div>
 
 
-            <a href="itms-services://?action=download-manifest&url=https://cdn.resource.app.miaoleyouxi.com/pack/631M1/ios/631M1-M117562_S117562.plist?5.0.5.20181212153340"
+            <a href="http://hey.sdk.91vv.com/Api/DownloadGame.do?gameId=631M1&mcId=M117562&scId=M117562_S117562&deviceType=1"
                class="h5-bot-link j-copylink">
                 <div class="game-btn col-xs-5">
                     <button>立即下载</button>
@@ -759,9 +759,9 @@
                 fixedBot.addClass('ios').find('a').attr('href', 'javascript:showreg();').find('.has-homepage .homepage-download').text('注册');
             }
         } else {
-            h5Banner.addClass('adr').find('a').attr('href', 'http://hey.sdk.91vv.com/Api/DownloadGame.do?gameId=631M1&mcId=M117562&scId=M117562_S117562&deviceType=2').children('img').attr('src', 'http://cdn.resource.app.miaoleyouxi.com/app/logo//gameExt/631M1-dl-banner-1?1553837674533');
-            fixedBot.addClass('adr').find('a').attr('href', 'http://hey.sdk.91vv.com/Api/DownloadGame.do?gameId=631M1&mcId=M117562&scId=M117562_S117562&deviceType=2').find('.game-btn button').text('立即下载');
-            fixedBot.addClass('adr').find('a').attr('href', 'http://hey.sdk.91vv.com/Api/DownloadGame.do?gameId=631M1&mcId=M117562&scId=M117562_S117562&deviceType=2').find('.has-homepage .homepage-download').text('下载');
+            h5Banner.addClass('adr').find('a').attr('href', 'http://hey.sdk.91vv.com/Api/DownloadGame.do?gameId=631M1&mcId=M117562&scId=M117562_S117562&deviceType=1').children('img').attr('src', 'http://cdn.resource.app.miaoleyouxi.com/app/logo//gameExt/631M1-dl-banner-1?1553837674533');
+            fixedBot.addClass('adr').find('a').attr('href', 'http://hey.sdk.91vv.com/Api/DownloadGame.do?gameId=631M1&mcId=M117562&scId=M117562_S117562&deviceType=1').find('.game-btn button').text('立即下载');
+            fixedBot.addClass('adr').find('a').attr('href', 'http://hey.sdk.91vv.com/Api/DownloadGame.do?gameId=631M1&mcId=M117562&scId=M117562_S117562&deviceType=1').find('.has-homepage .homepage-download').text('下载');
 
         }
 
