--- a/nkgg.html
+++ b/nkgg.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" type="text/css" href="css/infor.css">
     <script src="/js/wx.js?version=1.0"></script>
     <script src="/js/jquery.min.js"></script>
-    <script src="/js/common.js?version=189006"></script>
-    <script src="/js/wx.js?version=1.0.10005000"></script>
+    <script src="/js/common.js?version=18900006"></script>
+    <script src="/js/wx.js?version=1.0.1000050000"></script>
 </head>
 
 <body>
