--- a/lz515y000.html
+++ b/lz515y000.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" type="text/css" href="./lzy/infor.css">
     <link rel="stylesheet" type="text/css" href="./lzy/css.css">
     <script src="./js/jquery.min.js?version=1846206"></script>
-    <script src="./js/common.js?version=154500602006"></script>
+    <script src="./js/common.js?version=1545010602006"></script>
     <script src="./js/wx.js?version=15840020560"></script>
+    <script src="js/common.js"></script>
 </head>
 <style>
     .qr_code_pc_inner img {
