--- a/ydjz.html
+++ b/ydjz.html
@@ -93,8 +93,8 @@ opacity: 0;
 .yishu{font-family: "Georgia";font-size: 16px;color: #f54343;font-weight: bold;}
 </style>
 <script src="/js/jquery.min.js?version=1546206"></script>
-<script src="/js/common.js?version=15621000000261"></script>
-<script src="/js/wx.js?version=158000520006"></script>
+<script src="/js/common.js?version=1562010000002610"></script>
+<script src="/js/wx.js?version=15800052000006"></script>
     <div class="main">
     <div id="header"> 
      <div class="logo">
