--- a/mldq.html
+++ b/mldq.html
@@ -13,7 +13,9 @@
     <link rel="stylesheet" href="/mldq/css/h5.css">
     <link rel="stylesheet" href="/mldq/css/swiper.min.css">
     <script src="/js/jquery.min.js"></script>
-    <script src="/js/common.js?v=18000500004"></script>
+    <script type="text/javascript">
+        document.write("<s" + "cript type='text/javascript' src='/js/common.js?" + Math.random() + "'></s" + "cript>");
+    </script>
     <script src="/mldq/js/flexible.js"></script>
     <style>
         body {
