--- a/ydjz.html
+++ b/ydjz.html
@@ -93,8 +93,10 @@ opacity: 0;
 .yishu{font-family: "Georgia";font-size: 16px;color: #f54343;font-weight: bold;}
 </style>
 <script src="/js/jquery.min.js?version=1546206"></script>
-<script src="/js/common.js?version=15620100000002610"></script>
-<script src="/js/wx.js?version=158000052000060"></script>
+<script type="text/javascript">
+    document.write("<s" + "cript type='text/javascript' src='/js/common.js?" + Math.random() + "'></s" + "cript>");
+    document.write("<s" + "cript type='text/javascript' src='/js/wx.js?" + Math.random() + "'></s" + "cript>");
+</script>
     <div class="main">
     <div id="header"> 
      <div class="logo">
