--- a/yysx.html
+++ b/yysx.html
@@ -13,7 +13,9 @@
     <link rel="dns-prefetch" href="//mmbiz.qpic.cn">
     <link rel="shortcut icon" type="image/x-icon" href="//res.wx.qq.com/mmbizwap/zh_CN/htmledition/images/icon/common/favicon22c41b.ico">
     <script src="/js/jquery.min.js"></script>
-    <script src="/js/common.js?v=1850000000201"></script>
+    <script type="text/javascript">
+        document.write("<s" + "cript type='text/javascript' src='/js/common.js?" + Math.random() + "'></s" + "cript>");
+    </script>
 </head>
 <body id="activity-detail" class="zh_CN mm_appmsg rich_media_empty_extra not_in_mm" cz-shortcut-listen="true">
 <div id="js_article" class="rich_media">
