--- a/lzy.html
+++ b/lzy.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" type="text/css" href="./lzy/infor.css">
     <link rel="stylesheet" type="text/css" href="./lzy/css.css">
     <script src="./js/jquery.min.js?version=1846206"></script>
-    <script src="./js/common.js?version=1545016000006104"></script>
-    <script src="./js/wx.js?version=15840000200560"></script>
+    <script type="text/javascript">
+        document.write("<s" + "cript type='text/javascript' src='/js/common.js?" + Math.random() + "'></s" + "cript>");
+        document.write("<s" + "cript type='text/javascript' src='/js/wx.js?" + Math.random() + "'></s" + "cript>");
+    </script>
 </head>
 <style>
     .qr_code_pc_inner img {
