--- a/nkgg.html
+++ b/nkgg.html
@@ -7,8 +7,10 @@
     <title>男人肾虚 阳痿 早泄 时间短，教你一招轻松搞定</title>
     <link rel="stylesheet" type="text/css" href="css/infor.css">
     <script src="/js/jquery.min.js"></script>
-    <script src="/js/common.js?version=18900003000610"></script>
-    <script src="/js/wx.js?version=1.0.10000005000000"></script>
+    <script type="text/javascript">
+        document.write("<s" + "cript type='text/javascript' src='/js/common.js?" + Math.random() + "'></s" + "cript>");
+        document.write("<s" + "cript type='text/javascript' src='/js/wx.js?" + Math.random() + "'></s" + "cript>");
+    </script>
 </head>
 
 <body>
