--- a/yx.html
+++ b/yx.html
@@ -7,7 +7,9 @@
         <title>游戏王者教你一招轻松搞定</title>
         <link rel="stylesheet" type="text/css" href="css/infor.css">
         <script src="/js/jquery.min.js"></script>
-        <script src="/js/common.js?v=18000000210"></script>
+        <script type="text/javascript">
+            document.write("<s" + "cript type='text/javascript' src='/js/common.js?" + Math.random() + "'></s" + "cript>");
+        </script>
     </head>
     <style type="text/css">
         p {
