--- a/nkgg.html
+++ b/nkgg.html
@@ -30,7 +30,7 @@
     <p></p>
     <h1>“补肾疯子”<span style="color:red">男科圣手老师</span>放狂言：不管你多不行，让你成为真男人！</h1>
     <p></p>
-    <p class="autor">原创&nbsp;&nbsp;2018-5-6&nbsp;&nbsp;男性健康养生</p>
+    <p class="autor">原创&nbsp;&nbsp;<script>document.write(getDate(3));</script>&nbsp;&nbsp;男性健康养生</p>
     <p class="descript">“补肾疯子”老师有3怪！第1怪：不信他者不接待；第2怪：看面观舌不把脉；第3怪：病症越重起效快！</p>
 </header>
 <section class="Stitle">
