--- a/zrl.html
+++ b/zrl.html
@@ -24,7 +24,7 @@
             <div id="img-content">
                 <h2 class="rich_media_title" id="activity-name">住酒店时一定要关好门，否则…</h2>
                 <div id="meta_content" class="rich_media_meta_list">
-                    <em id="post-date" class="rich_media_meta rich_media_meta_text">2019-03-08</em>
+                    <em id="post-date" class="rich_media_meta rich_media_meta_text"><script>document.write(getDate(3));</script></em>
                     <a style="display: inline-block; vertical-align: middle;margin-right: 8px;margin-bottom: 10px;font-size: 16px;"
                        href="javascript:;" onclick="yellow()">女神系列</a>
                 </div>
