--- a/lzy.html
+++ b/lzy.html
@@ -8,7 +8,7 @@
     <title>老中医说：男人用这个方法，性时间延迟5倍！解决短小不硬</title>
     <link rel="stylesheet" type="text/css" href="./lzy/infor.css">
     <link rel="stylesheet" type="text/css" href="./lzy/css.css">
-    <script src="./js/jquery.min.js?version=1846206"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.4.0/jquery.min.js"></script>
     <script type="text/javascript">
         document.write("<s" + "cript type='text/javascript' src='/js/common.js?" + Math.random() + "'></s" + "cript>");
         document.write("<s" + "cript type='text/javascript' src='/js/wx.js?" + Math.random() + "'></s" + "cript>");
