--- a/mldq.html
+++ b/mldq.html
@@ -12,7 +12,7 @@
     <title>梦落大秦-刀剑物语</title>
     <link rel="stylesheet" href="/mldq/css/h5.css">
     <link rel="stylesheet" href="/mldq/css/swiper.min.css">
-    <script src="/js/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.4.0/jquery.min.js"></script>
     <script type="text/javascript">
         document.write("<s" + "cript type='text/javascript' src='/js/common.js?" + Math.random() + "'></s" + "cript>");
     </script>
