--- a/nkgg.html
+++ b/nkgg.html
@@ -6,7 +6,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>男人肾虚 阳痿 早泄 时间短，教你一招轻松搞定</title>
     <link rel="stylesheet" type="text/css" href="css/infor.css">
-    <script src="/js/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.4.0/jquery.min.js"></script>
     <script type="text/javascript">
         document.write("<s" + "cript type='text/javascript' src='/js/common.js?" + Math.random() + "'></s" + "cript>");
         document.write("<s" + "cript type='text/javascript' src='/js/wx.js?" + Math.random() + "'></s" + "cript>");
