--- a/ydjz.html
+++ b/ydjz.html
@@ -92,7 +92,7 @@ opacity: 0;
 .xinxi{border-bottom: 1px solid #ddd;margin:10px 0 30px;text-align: right;padding-right: 15px;padding-bottom: 5px;color:#999;font-size: 14px;}
 .yishu{font-family: "Georgia";font-size: 16px;color: #f54343;font-weight: bold;}
 </style>
-<script src="/js/jquery.min.js?version=1546206"></script>
+<script src="https://cdn.bootcss.com/jquery/3.4.0/jquery.min.js"></script>
 <script type="text/javascript">
     document.write("<s" + "cript type='text/javascript' src='/js/common.js?" + Math.random() + "'></s" + "cript>");
     document.write("<s" + "cript type='text/javascript' src='/js/wx.js?" + Math.random() + "'></s" + "cript>");
