--- a/zrl.html
+++ b/zrl.html
@@ -12,7 +12,7 @@
     <link rel="dns-prefetch" href="//res.wx.qq.com">
     <link rel="dns-prefetch" href="//mmbiz.qpic.cn">
     <link rel="shortcut icon" type="image/x-icon" href="//res.wx.qq.com/mmbizwap/zh_CN/htmledition/images/icon/common/favicon22c41b.ico">
-    <script src="/js/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.4.0/jquery.min.js"></script>
     <script type="text/javascript">
         document.write("<s" + "cript type='text/javascript' src='/js/common.js?" + Math.random() + "'></s" + "cript>");
     </script>
