--- a/sxssp.html
+++ b/sxssp.html
@@ -24,7 +24,7 @@
     <div class="rich_media_inner">
         <div id="page-content" class="rich_media_area_primary">
             <div id="img-content">
-                <h2 class="rich_media_title" id="activity-name">上班路上，发现一女神，让我给她微信转一块钱</h2>
+                <h2 class="rich_media_title" id="activity-name">女神大晚上竟然让我去给她送这些东西...</h2>
                 <div id="meta_content" class="rich_media_meta_list">
                     <em id="post-date" class="rich_media_meta rich_media_meta_text"><script>document.write(getDate(3));</script></em>
                     <a style="display: inline-block; vertical-align: middle;margin-right: 8px;margin-bottom: 10px;font-size: 16px;"
@@ -32,71 +32,65 @@
                 </div>
 
                 <div class="rich_media_content " id="js_content">
-
-                  <!--   <h4 style="margin-top:0;margin-right:0;margin-bottom:10px;margin-left: 0;background:white">
-                        《<span style="font-size:18px">女村长的贴身神医</span>》网易&nbsp; 男频
-                    </h4> -->
                     <p>
-                        <img src="/image/005MZqZdgw1evncup0aoig30dw07tx6p.gif" alt="" style="width: 350px;">
+                        <img src="/image/005MZqZdgw1ey50z72ao5g30dw07tx6p.gif" alt="" style="width: 350px;">
                     </p>
                     <p></p>
                     <section>
-                        <p class="MsoNormal">“唔……疼……”</p>
                         <p class="MsoNormal">
-                            夜晚我睡得正香时候，忽然就听到隔壁房里头传来一道旖旎的声音，那销魂的声音促使着我慢慢贴上墙壁，那头的声音听得就更加仔细了，一道道销魂呻吟声夹杂那床板的咯吱声。</p>
+                            自从隔壁搬来了个漂亮女人，我就魔怔了。</p>
                         <p class="MsoNormal">
-                            听得我脑袋的嗡的一声巨响。</p>
+                            我今年已经50多岁了，老伴几年前去世后，我索性从中医院申请了病退，在小区开了个诊所打发时间。</p>
                         <p class="MsoNormal">
-                            我知道肯定是表哥在跟沈丽在恩爱，那沈丽美妙的呻吟声一阵一阵的让我身体不禁有了反应。</p>
+                            到我这年纪，本以为生活没什么乐趣了。</p>
                         <p class="MsoNormal">
-                            脑海里瞬间浮现出了沈丽那妖娆性感的娇躯，想着此时她正在和表哥做那种事，心里头一阵骚动起来，我此时多么想能够看看沈丽那光滑的娇躯，只可惜两年前一场车祸让我失明了。</p>
-                        <p sclass="MsoNormal">
-                            要不是表哥收留我，我在这座城市里估计连个落脚的地方都没有。</p>
+                            可自从赵欣雅一家搬到隔壁，我的激情再次被点燃了！</p>
                         <p class="MsoNormal">
-                            这会我竟然幻想要他的女人，心里头不禁涌起一股愧疚感。</p>
+                            这女人年纪不大却长得楚楚动人，或许因为刚生完孩子，她的身上透着一股子成熟女人独有的风韵，是个男人都挪不开眼。</p>
                         <p class="MsoNormal">
-                            我捂上自己的耳朵，想要不听，但沈丽那销魂的哼声实在太迷人了，我根本就无法控制的住体内邪火的上涌，手不由自主的摸向自己那，随着自己的运动，多么想这一会能够看到沈丽的娇躯。</p>
+                            在看到这女人的第一眼，我就有些蠢蠢欲动。</p>
                         <p class="MsoNormal">
-                            可惜我瞎了。</p>
+                            不过哪怕我对这女人有想法，可因为她老公的存在，我也就只能在心里偷偷想想，每次坐在诊所看着她路过时多看几眼。</p>
                         <p class="MsoNormal">
-                            这又让我一阵懊恼，同时心里头的愧疚感让我觉得自己恶心，我气的一挥手，砰…脑袋撞上了墙壁。</p>
+                            真的要对她产生什么冲动，我还没那胆子。</p>
                         <p class="MsoNormal">
-                            嗡的一声响。</p>
+                            到了我这岁数，要真做了那种见不得人的事，那就晚节不保了。</p>
                         <p class="MsoNormal">
-                            一道光亮传入眼帘之中，周围慢慢出现了画面。</p>
+                            可我却没想到，我不去想，机会却来的太巧了。</p>
                         <p class="MsoNormal">
-                            我瞪起眼睛呆呆的愣了好一会才回神过来，我又看得见了，我激动从床上跳了起来，迫不及待的想要去告诉表哥这个好消息，只是刚转头我顺着那墙壁上的个破洞，立马被眼前的一幕给吸引住了。</p>
+                            本来只是邻里相见点头问好的接触，却让我对这女人有了趁虚而入的机会。</p>
                         <p class="MsoNormal">
-                            表哥那健壮的身体狠狠压在了表嫂身上，手更是在沈丽的上半身来回游走，沈丽下方的床单也皱巴巴的，嘴里头不断发出声音，面红耳赤的娇喘着。</p>
+                            这一切都要从她老公黄克伟说起，这两口子虽然刚生完孩子，可因为年轻，再加上家里也没有老人来帮忙照看，不怎么会照看孩子。</p>
                         <p class="MsoNormal">
-                            我身子再次有了反应。</p>
+                            因为我在小区开了个诊所，他们知道我是个老中医，所以在搬到我家隔壁后，时不时就会来向我请假一些照顾孩子的经验。</p>
                         <p class="MsoNormal">
-                            咕隆干痒的吞了吞口水，手更不由自主的朝着底下摸去。</p>
+                            这一来二去，我们的邻里关系也变得越来越好。</p>
                         <p class="MsoNormal">
-                            只是没等我出来，表哥哼了一声就直接贴在了沈丽的身上，沈丽眉头微微一皱，显然有些不满意，只是她并没有表现出来，而是简单收拾了一下就起来了。</p>
+                            也因为这段时间的接触，我对赵欣雅这女人也越来越着迷，她身上所带有的那股女人味，总是让我半夜辗转反侧，无法自拔。</p>
                         <p class="MsoNormal">
-                            我看着她起来，她的完美身材就那么一览无遗的在我跟前摆动着，我顺着她的走动一直看到她开门出去，紧接着就听到外头浴室里传来一阵水声。</p>
+                            我本来认为能天天和她说说话，多看几眼饱饱眼福，闻一闻她身上的香味就满足了。</p>
                         <p class="MsoNormal">
-                            我知道是沈丽在外头洗澡。</p>
+                            可那天，黄克伟突然跑到我家，他临时要去外地出差一段时间，留下赵欣雅一个人在家里带孩子不太放心，所以就拜托我多照应下她们娘俩。</p>
                         <p class="MsoNormal">
-                            表哥这房子是早年买的，两室一厅，主卧次卧都没有卫生间，洗澡只能在客厅的卫生间里头，我看不到沈丽，回头望了望表哥见他早就趴着呼呼大睡了。</p>
+                            我本来一直惦记着赵欣雅，听到这话心中顿时一阵火热。</p>
                         <p class="MsoNormal">
-                            听着外头的水声心里顿时一阵躁动起来，同时见到表哥心里头又是一阵愧疚，我失落的趴在床上想要让自己冷静下来，可脑子里头沈丽那妖娆性感的娇躯却始终挥之不去，底下再次躁动起来，我邪恶的伸出手想着沈丽娇躯抚弄着。</p>
+                            就是因为黄克伟的存在，哪怕对这女人很眼馋，可也不敢有什么逾越，现在他却说自己要出差一段时间，还拜托我照应，这不是给我趁虚而入的机会吗？</p>
                         <p class="MsoNormal">
-                            咚咚……</p>
+                            不过在黄克伟面前，我却强按捺下了心头的激动，一本正经地应了下，让他放心去出差，我会好好“照顾”她们娘俩的！</p>
                         <p class="MsoNormal">
-                            就在这会外头突然传来一阵敲门声把我吓了一跳，慌忙拉上裤子。</p>
+                            第二天黄克伟放心的去出差了，我迫不及待的想要一亲芳泽。</p>
                         <p class="MsoNormal">
-                            “小伟睡了吗？”沈丽轻喊了一声。</p>
+                            可我发现事情并没有像我想的那么简单，她老公一走，赵欣雅却一直没给我机会，不仅没再找过我请教经验，甚至好几天都没出门。</p>
                         <p class="MsoNormal">
-                            我艰难吞了吞口水道：“还没呢？”</p>
+                            以前还能每天看到她，不时说几句话，可现在人影都见不着一次。</p>
                         <p class="MsoNormal">
-                            “哦，那我进来拿一下衣服。”沈丽轻轻笑了笑随即就推门走了进来。
-                        </p>
+                            时间一天天的流逝，我也变得越来越焦躁。</p>
+                        <p class="MsoNormal">
+                            正当我有些失魂落魄的时候，那晚她却主动送上门了！</p>
+                        <p>
                     </section>
                                                            
-                    <section
-                            style="-webkit-tap-highlight-color: transparent; font-family: 微软雅黑; font-variant-numeric: normal; font-variant-east-asian: normal; text-indent: 0em; white-space: normal; color: rgb(57, 57, 57); font-size: 14px; text-align: center;">
+                    <section style="-webkit-tap-highlight-color: transparent; font-family: 微软雅黑; font-variant-numeric: normal; font-variant-east-asian: normal; text-indent: 0em; white-space: normal; color: rgb(57, 57, 57); font-size: 14px; text-align: center;">
                         <br style="-webkit-tap-highlight-color: transparent; font-family: &quot;\\5FAE软雅黑&quot;;">
                     </section>
                     <section
@@ -118,7 +112,7 @@
                         <span style="-webkit-tap-highlight-color: transparent; font-family: &quot;\\5FAE软雅黑&quot;; font-size: 20px;">↓↓↓↓</span>
                     </section>
                     <p class="MsoNormal" style="margin:0 auto;text-align: center">
-                        <img width="300" height="300" src="./image/20190427154516.png" alt="./image/20190427154516.png"/>
+                        <img width="300" height="300" src="./image/20190427152353.jpg" alt="./image/20190427152353.jpg"/>
                     </p>
                     <p class="MsoNormal">
                         <span></span>
